@@ -21,7 +21,7 @@ public class ProxyFactoryTest extends TestCase {
         MyMethodHandler myHandler = new MyMethodHandler();
         myHandler.setX(4711);
 
-        MyCls myCls = (MyCls) proxyClass.newInstance();
+        MyCls myCls = (MyCls) proxyClass.getConstructor().newInstance();
         ((ProxyObject) myCls).setHandler(myHandler);
 
         MethodHandler h2 = ((ProxyObject) myCls).getHandler();
@@ -38,7 +38,7 @@ public class ProxyFactoryTest extends TestCase {
         MyMethodHandler myHandler = new MyMethodHandler();
         myHandler.setX(4711);
 
-        MyCls myCls = (MyCls) proxyClass.newInstance();
+        MyCls myCls = (MyCls) proxyClass.getConstructor().newInstance();
         ((ProxyObject) myCls).setHandler(myHandler);
 
 
@@ -87,5 +87,42 @@ public class ProxyFactoryTest extends TestCase {
     public interface JIRA127Sub extends JIRA127 {
         JIRA127Sub get();
     }
-    
+
+    public void testDefaultMethod() throws Exception {
+        ProxyFactory proxyFactory = new ProxyFactory();
+        //proxyFactory.writeDirectory = "./dump";
+        proxyFactory.setInterfaces(new Class[]{ TestDefaultI.class });
+        Class intf = proxyFactory.createClass();
+        TestDefaultI obj = (TestDefaultI)intf.getConstructor().newInstance();
+        obj.foo();
+
+        ProxyFactory proxyFactory2 = new ProxyFactory();
+        //proxyFactory2.writeDirectory = "./dump";
+        proxyFactory2.setSuperclass(TestDefaultC.class);
+        Class clazz2 = proxyFactory2.createClass();
+        TestDefaultC obj2 = (TestDefaultC)clazz2.getConstructor().newInstance();
+        obj2.foo();
+        obj2.bar();
+
+        ProxyFactory proxyFactory3 = new ProxyFactory();
+        proxyFactory3.setSuperclass(TestDefaultC2.class);
+        Class clazz3 = proxyFactory3.createClass();
+        TestDefaultC2 obj3 = (TestDefaultC2)clazz3.getConstructor().newInstance();
+        obj3.foo();
+        obj3.bar();
+        obj3.baz();
+    }
+
+    public static interface TestDefaultI {
+        default int foo() { return 10; }
+    }
+
+    public static class TestDefaultC implements TestDefaultI {
+        public int foo() { return 1; }
+        public int bar() { return TestDefaultI.super.foo(); }
+    }
+
+    public static class TestDefaultC2 extends TestDefaultC {
+        public int baz() { return super.foo(); }
+    }
 }
