@@ -45,7 +45,7 @@ public class ProxyFactoryPerformanceTest extends TestCase {
         error = null;
 		Thread[] threads = new Thread[MAX_THREADS];
 		for (int i = 0; i < threads.length; ++i) {
-			threads[i] = (Thread)cl.newInstance();
+			threads[i] = (Thread)cl.getDeclaredConstructor().newInstance();
 		}
 		long time = System.currentTimeMillis();
 		for (int i = 0; i < threads.length; ++i) {
@@ -104,7 +104,7 @@ class ProxyMaker extends Thread implements MethodHandler {
 			factory.setSuperclass(SampleBean.class);
 			factory.setInterfaces(SampleBean.class.getInterfaces());
 			factory.setFilter(FINALIZE_FILTER);
-			factory.setHandler(this);
+			// factory.setHandler(this);
 
 			Class proxyClass = factory.createClass();
 			//System.out.println("proxy name: " + proxyClass.getName());
